src/test/ui/unconstrained-ref.stderr
error[E0282]: type annotations needed
  --> $DIR/unconstrained-ref.rs:6:5
   |
LL |     S { o: &None }; //~ ERROR type annotations needed [E0282]
   |     ^ cannot infer type for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
